[gd_scene load_steps=15 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/m5x7Subtitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ambience.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/effects/zapsplat_bells_small_hand_bell_ring_005_73029.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/effects/zapsplat_bell_very_large_strike_mallet_gong_like_49177.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/images/flash_sprite.png" type="Texture" id=14]
[ext_resource path="res://Camera2D.gd" type="Script" id=15]
[ext_resource path="res://assets/sounds/effects/you_win.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/sounds/effects/you_lose.mp3" type="AudioStream" id=20]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="Items" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 15 )

[node name="ShakeTween" type="Tween" parent="Camera2D"]

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="FlashTimer" type="Timer" parent="Camera2D"]
wait_time = 0.25
one_shot = true

[node name="FlashSprite" type="Sprite" parent="Camera2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 3.99999 )
scale = Vector2( 12.5, 7.25 )
texture = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
theme = ExtResource( 3 )

[node name="GridDebugLabel" type="RichTextLabel" parent="CanvasLayer/DebugContainer"]
margin_right = 75.0
margin_bottom = 216.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "..."
text = "..."
fit_content_height = true

[node name="UIContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIContainer"]
margin_right = 384.0
margin_bottom = 24.0
alignment = 1

[node name="RemainingTimeLabel" type="RichTextLabel" parent="CanvasLayer/UIContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 24 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Doom comes in ??:??[/center]"
text = "Doom comes in ??:??"

[node name="EndContainer" type="PanelContainer" parent="CanvasLayer/UIContainer/VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 384.0
margin_bottom = 92.0

[node name="EndLabel" type="RichTextLabel" parent="CanvasLayer/UIContainer/VBoxContainer/EndContainer"]
margin_right = 384.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[color=red][center]DOOM IS HERE[/center][/color]"
text = "DOOM IS HERE"

[node name="TickTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DingDelay" type="Timer" parent="."]

[node name="Ambience" parent="." instance=ExtResource( 6 )]

[node name="ItemDingPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="GongPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="WinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="LosePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
